[tool.poetry]
name = "eliza"
version = "0.1.0"
description = "A recreation of the classic chatbot"
authors = ["Lucas Melin <lucas.melin@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
eliza = 'eliza:program'

[tool.poetry.dependencies]
python = "^3.9"
rich = "^10.16.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
